# folder2pdf

./: README.md  pyproject.toml  requirements.txt
folder2pdf/: __init__.py  cli.py  converter.py
tests/: test_folder2pdf.py
